styles.scss
@import 'https://fonts.googleapis.com/css?family=Lily+Script+One';


/*
    Color variables
 */
$primaryColor: #CDEAC0;
$secondaryColor: #EFE9AE;
$tertiaryColor: #FEC3A6;
$quaternaryColor:#FF928B;
$quinaryColor: #FFAC81;

body{
    background-color: #333;
}

line{
    color: darkgray;
}
label {
    display: inline-block;
    margin-bottom: .5rem;
    color: $secondaryColor;
    margin-right: 35px;
}
.domain{
    color: darkgray;
}

#placeholder{
    color: $quaternaryColor;
    text-align: center;
    margin-top: 20px;
}

/*
    Stretch out the main bootstap container max width to allow the graph width to be wider that unsual
 */
@media (min-width: 992px) {
    .container {
        max-width: 1350px;
    }
}

/*
    Styling for inspiration page and card animations
 */
.nCard {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 300px;
    height: 600px;
    margin: -150px;
    float: left;
    perspective: 500px;
}

.nContent {
    position: absolute;
    width: 100%;
    height: 100%;
    box-shadow: 0 0 15px rgba(0,0,0,0.1);
    transition: transform 1s;
    transform-style: preserve-3d;
}

.nCard:hover .nContent {
    transform: rotateY( 180deg ) ;
    transition: transform 0.5s;
}

.front,
.back {
    position: absolute;
    height: 100%;
    width: 100%;
    background: white;
    line-height: 550px;
    color: white;
    text-align: center;
    font-size: 35px;
    font-weight: 600;
    border-radius: 5px;
    backface-visibility: hidden;
}

.back {
    background: black;
    color: white;
    transform: rotateY( 180deg );
}

.back{
    a {
        color: white;
    }
}

.inspoHead{
    text-align: center;
    margin: 0 auto 10px auto;
    font-weight: bolder;
    color: $quinaryColor;
}


/*
    Main Graph Container
 */
.mainContent{
    padding: 20px;
}

/*
    Boostrap button styling and re-colour
 */
.btn-outline-success{
    border-color: $primaryColor;
    color: $primaryColor ;
    &:hover{
        text-decoration: none;
        background-color: $primaryColor !important;
        border-color: $primaryColor;
        color: black ;
    }
}

.btn-outline-info{
    border-color: $secondaryColor;
    color: $secondaryColor ;
    &:hover{
        text-decoration: none;
        background-color: $secondaryColor !important;
        border-color: $secondaryColor;
        color: black ;
    }
}

.btn-outline-danger{
    border-color: $tertiaryColor;
    color: $tertiaryColor ;
    &:hover{
        text-decoration: none;
        background-color: $tertiaryColor !important;
        border-color: $tertiaryColor;
        color: black ;
    }
}

.btn-outline-primary{
    border-color: $quaternaryColor;
    color: $quaternaryColor ;
    &:hover{
        text-decoration: none;
        background-color: $quaternaryColor !important;
        border-color: $quaternaryColor;
        color: black ;
    }

}

.btn-outline-warning{
    border-color: $quinaryColor;
    color: $quinaryColor ;
    display: inline-block;
    margin-top: -10px;
    &:hover{
        text-decoration: none;
        background-color: $quinaryColor !important;
        border-color: $quinaryColor;
        color: black ;
    }

}

.btn-success{
    border-color: $primaryColor;
    color: black;
    background-color: $primaryColor !important;
    &:hover{
        border-color: $primaryColor;
    }
}

.btn-info{
    border-color: $secondaryColor;
    color: black;
    background-color: $secondaryColor !important;
    &:hover{
        border-color: $secondaryColor;
    }
}

.btn-danger{
    border-color: $tertiaryColor;
    color: black;
    background-color: $tertiaryColor !important;
    &:hover{
        border-color: $tertiaryColor;
    }
}

.btn-primary{
    border-color: $quaternaryColor;
    color: black;
    background-color: $quaternaryColor !important;

}

.btn{
    margin: 0 20px;
}

.buttonGroup{
    display: block;
    margin: 0 auto;
    text-align: center;
}

.modal-content{
    background-color: #343a40;
    color: whitesmoke;
}

.colorImg {
    max-width: 80%;
    height: auto;
    margin: 0 auto;
    display: block;
}

.close{
    color: whitesmoke;
    &:hover{
        color: mediumvioletred;
    }
}

.bubbles{
    stroke-width: 1px;
    stroke: black;
    opacity: .8;
    &:hover{
        stroke:$primaryColor;
    }
  }

.axisLabels{
    fill: whitesmoke;
    font-weight: bolder;
}

#viz{
    margin-top: 50px;
}

.yearLabel{
    text-shadow: #000 0px 0px 35px;
    -webkit-font-smoothing: antialiased;
}

#loader{
    left: 46%;
    position: absolute;
    top: 44%;
    width: 100px;
    height: 100px;
}

.vizControls{
   margin-top: 65px;
   filter: drop-shadow(rgba(0, 0, 0, 0.7) 18px 23px 5px); 
}


/*
*       Track Styling 
*       Generated from http://danielstern.ca/range.css/?ref=css-tricks#/
*/

  input[type=range] {
    width: 90%;
    margin: 13.85px 0;
    background-color: transparent;
    -webkit-appearance: none;
    display: inline-block;
    float: right;
  }
  input[type=range]:focus {
    outline: none;
  }
  input[type=range]::-webkit-slider-runnable-track {
    background: #cdeac0;
    border: 0.1px solid #000000;
    border-radius: 24.8px;
    width: 100%;
    height: 8.3px;
    cursor: pointer;
  }
  input[type=range]::-webkit-slider-thumb {
    margin-top: -13.95px;
    width: 16px;
    height: 36px;
    background: #efe9ae;
    border: 1px solid #000000;
    border-radius: 3px;
    cursor: pointer;
    -webkit-appearance: none;
  }
  input[type=range]:focus::-webkit-slider-runnable-track {
    background: #cdeac0;
  }
  input[type=range]::-moz-range-track {
    background: #cdeac0;
    border: 0.1px solid #000000;
    border-radius: 24.8px;
    width: 100%;
    height: 8.3px;
    cursor: pointer;
  }
  input[type=range]::-moz-range-thumb {
    width: 16px;
    height: 36px;
    background: #efe9ae;
    border: 1px solid #000000;
    border-radius: 3px;
    cursor: pointer;
  }
  input[type=range]::-ms-track {
    background: transparent;
    border-color: transparent;
    border-width: 14.85px 0;
    color: transparent;
    width: 100%;
    height: 8.3px;
    cursor: pointer;
  }
  input[type=range]::-ms-fill-lower {
    background: #cdeac0;
    border: 0.1px solid #000000;
    border-radius: 49.6px;
  }
  input[type=range]::-ms-fill-upper {
    background: #cdeac0;
    border: 0.1px solid #000000;
    border-radius: 49.6px;
  }
  input[type=range]::-ms-thumb {
    width: 16px;
    height: 36px;
    background: #efe9ae;
    border: 1px solid #000000;
    border-radius: 3px;
    cursor: pointer;
    margin-top: 0px;
    /*Needed to keep the Edge thumb centred*/
  }
  input[type=range]:focus::-ms-fill-lower {
    background: #cdeac0;
  }
  input[type=range]:focus::-ms-fill-upper {
    background: #cdeac0;
  }
  /*TODO: Use one of the selectors from https://stackoverflow.com/a/20541859/7077589 and figure out
  how to remove the virtical space around the range input in IE*/
  @supports (-ms-ime-align:auto) {
    /* Pre-Chromium Edge only styles, selector taken from hhttps://stackoverflow.com/a/32202953/7077589 */
    input[type=range] {
      margin: 0;
      /*Edge starts the margin from the thumb, not the track as other browsers do*/
    }
  }
  
.form-control {
    display: inline-block;
    width: 26%;
}

.optionBoxes{
    margin: 0px 85px;
    display: inline;
}

